--- a/resources/index.html
+++ b/resources/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>cljsrt</title>
@@ -7,6 +8,7 @@
 
     <canvas id="result" width="640" height="480"></canvas>
 
-    <script type="text/javascript" src="public/cljsrt.js"> </script>
+    <script src="/app.js" type="text/javascript"></script>
+
   </body>
 </html>
