--- a/resources/index.html
+++ b/resources/index.html
@@ -8,6 +8,7 @@
 
     <canvas id="result" width="640" height="480"></canvas>
 
+    <script src="/gl-matrix-min.js" type="text/javascript"></script>
     <script src="/app.js" type="text/javascript"></script>
 
   </body>
